# AntiFacistIndoctrination

./: .gitignore  Cargo.toml  README.md
.github/workflows/: run.yml  run.yml.disabled
src/: main.rs
src/api/: api_cjd_list_post.rs  api_do_lesson_post.rs  mod.rs
src/controllers/: antifa_controller.rs  check_result_controller.rs  mod.rs  send_message_controller.rs
src/types/: cjd_list_post.rs  do_lesson_post.rs  mod.rs  sign_req.rs
src/utils/: args.rs  get_client.rs  mod.rs  send_message.rs  sha512.rs  study_result.rs
